--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>TheMihirChronicles</title>
 
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-	<link rel="stylesheet" href="/stylesheet/style.css">
+	<link rel="stylesheet" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Reenie+Beanie' rel='stylesheet' type='text/css'>
 
 </head>
