--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<p>I am absolutely passionate about <strong>fintech</strong> space and <strong>technology</strong>. I find <strong>art</strong> and <strong>astronomy</strong> to be absolutely cool. On the weekends, I volunteer as a <strong>Telescope Instructor</strong> at the Adler Planetarium. I usually read a lot when I am not working.</p>
 		</div>
 		<h2 class="body-end">-Mihir (me-here!)</h2>
-		<a href="http://themihirchronicles.tumblr.com/Projects"><button class ="btn" type="text">Projects</button></a>
+		<a href="http://themihirchronicles.tumblr.com/Projects"><button class ="btn" type="text">Enter</button></a>
 		<!-- <button class ="btn" type="text">Essays</button> -->
 	</div><br>
 
