--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 	<div class="body-container">
 		<h1 class="body-title">The Mihir Chronicles</h1><br>
 		<div class="body-content">
-		<p>Hi, I am Mihir (me-here). I am a <strong>full-stack web developer</strong> and an entrepreneur based in Chicago. Previously, founded a social enterprise venture <strong>Humble Pen</strong> and co-founded Royal Ace Investments.</p>
+		<p>Hi, I am Mihir (me-here). I am a <strong>full-stack web developer</strong> and an entrepreneur based in Chicago. Previously, founded a social enterprise venture, <strong>Humble Pen</strong> and co-founded Royal Ace Investments.</p>
 
-		<p>Aside from my entrepreneurial endeavours, I’ve also worked for several venture-backed startups.</p>
+		<p>Aside from my entrepreneurial endeavours, I’ve also worked for several venture-backed startups. Currently, I am a mentor at Dev Mountain. Lately, I've been fascinated by programming. Usually, I am on my computer learning new frameworks and technologies.</p>
 
-		<p>I am absolutely passionate about <strong>fintech</strong> space and <strong>technology</strong>. I find <strong>art</strong> and <strong>astronomy</strong> to be absolutely cool. On the weekends, I volunteer as a <strong>Telescope Instructor</strong> at the Adler Planetarium. I usually read a lot when I am not working.</p>
+		<p>I am absolutely passionate about <strong>fintech</strong> space and <strong>technology</strong>, in general. I find <strong>art</strong> and <strong>astronomy</strong> to be absolutely cool. On the weekends, I volunteer as a <strong>Telescope Instructor</strong> at the Adler Planetarium. I usually read a lot when I am not working.</p>
 		</div>
 		<h2 class="body-end">-Mihir (me-here!)</h2>
 		<a href="http://themihirchronicles.tumblr.com"><button class ="btn" type="text">Enter!</button></a>
