--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 	<div class="header-container">
 		<i class="fa fa-space-shuttle fa-spinner fa-spin fa-3x"></i>
-	</div><br><br>
+	</div><br>
 	
 	
 	<div class="body-container">
@@ -33,7 +33,7 @@
 	</div><br>
 
 	<div class="footer-container">
-		<ul class="flexbox">
+		<ul>
 			<li><a href="https://github.com/mihirchronicles"><i class="fa fa-github fa-2x"></i></a></li>
 			<li><a href="https://twitter.com/mihirchronicles"><i class="fa fa-twitter fa-2x"></i></a></li>
 			<li><a href="https://instagram.com/mihirchronicles"><i class="fa fa-instagram fa-2x"></i></a></li>
