--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width" />
 	<title>TheMihirChronicles</title>
 
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -17,7 +18,6 @@
 		<i class="fa fa-space-shuttle fa-spinner fa-spin fa-3x"></i>
 	</div><br>
 	
-	
 	<div class="body-container">
 		<h1 class="body-title">The Mihir Chronicles</h1><br>
 		<div class="body-content">
@@ -30,7 +30,7 @@
 		<h2 class="body-end">-Mihir (me-here!)</h2>
 		<a href="http://themihirchronicles.tumblr.com"><button class ="btn" type="text">Enter!</button></a>
 		<!-- <button class ="btn" type="text">Essays</button> -->
-	</div><br>
+	</div>
 
 	<div class="footer-container">
 		<ul>
