--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 	<div class="header-container">
 		<i class="fa fa-space-shuttle fa-spinner fa-spin fa-3x"></i>
-	</div><br>
+	</div><br><br>
 	
 	<div class="body-container">
 		<h1 class="body-title">The Mihir Chronicles</h1><br>
