--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 		<p>Aside from my entrepreneurial endeavours, I’ve also worked for several venture-backed startups. Lately, I've been fascinated by programming. Usually, I am on my computer learning new frameworks and technologies.</p>
 
-		<p>I am absolutely passionate about <strong>finance, programming</strong> and <strong>technology</strong>. I find <strong>art</strong> and <strong>astronomy</strong> to be absolutely cool. On the weekends, I volunteer as a <strong>Telescope Instructor</strong> at the Adler Planetarium. I am also working on Internet of Things (IoT) projects. Hardware is really cool. I usually read a lot when I am not working.</p>
+		<p>I am absolutely passionate about <strong>finance, programming</strong> and <strong>technology</strong>. I find <strong>art</strong> and <strong>astronomy</strong> to be absolutely cool. On the weekends, I volunteer as a <strong>Telescope Instructor</strong> at the Adler Planetarium. I am also working on <strong>Internet of Things (IoT)</strong> projects. Hardware is really cool. I usually read a lot when I am not working.</p>
 		</div>
 		<h2 class="body-end">-Mihir (me-here!)</h2>
 		<a href="http://themihirchronicles.tumblr.com"><button class ="btn" type="text">Enter!</button></a>
