--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<div class="body-container">
 		<h1 class="body-title">The Mihir Chronicles</h1><br>
 		<div class="body-content">
-		<p>Hi, I am Mihir (me-here). I am a <strong>programmer</strong> and an entrepreneur based in Chicago. Previously, founded a social enterprise venture, <strong>Humble Pen</strong> and co-founded Royal Ace Investments.</p>
+		<p>Mihir here. Get it? Me here! I am a <strong>programmer</strong> and an entrepreneur based out of Chicago. Previously, founded a social enterprise venture, <strong><a href="https://instagram.com/HumblePen/">Humble Pen</a></strong> and co-founded Royal Ace Investments, a commodity trading firm.</p>
 
 		<p>Aside from my entrepreneurial endeavours, I’ve also worked for several venture-backed startups. Lately, I've been fascinated by programming. Usually, I am on my computer learning new frameworks and technologies.</p>
 
