--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 	<div class="body-container">
 		<h1 class="body-title">The Mihir Chronicles</h1><br>
 		<div class="body-content">
-		<p>Mihir here. Get it? Me here! I am a <strong>programmer</strong> and an entrepreneur based out of Chicago. Previously, founded a social enterprise venture, <strong><a href="https://instagram.com/HumblePen/">Humble Pen</a></strong> and co-founded Royal Ace Investments, a commodity trading firm.</p>
+		<p>Mihir here. Get it? Me here! I am a <strong>Software Engineer</strong> and an <strong>Entrepreneur</strong> based out of Chicago. I am a founder of <strong><a href="https://instagram.com/HumblePen/">Humble Pen</a></strong> and co-founded Royal Ace Investments, a commodity trading firm.</p>
 
-		<p>Aside from my entrepreneurial endeavours, I’ve also worked for several venture-backed startups. Lately, I've been fascinated by programming. Usually, I am on my computer learning new frameworks and technologies.</p>
+		<p>I am passionate and curious about <strong>finance, programming</strong> and <strong>technology</strong>. I find <strong>art</strong> and <strong>astronomy</strong> to be absolutely cool. I am a <strong>Telescope Instructor</strong> volunteer at the Adler Planetarium. I like to read a lot about various topics.</p>
 
-		<p>I am absolutely passionate about <strong>finance, programming</strong> and <strong>technology</strong>. I find <strong>art</strong> and <strong>astronomy</strong> to be absolutely cool. On the weekends, I volunteer as a <strong>Telescope Instructor</strong> at the Adler Planetarium. I am also working on <strong>Internet of Things (IoT)</strong> projects. Hardware is really cool. I usually read a lot when I am not working.</p>
+		<p>I find it fascinating to solve complex problems that helps achieve human well-being. Currently, self-teaching hardware programming, guitar and Mandarin.</p>
 		</div>
 		<h2 class="body-end">-Mihir (me-here!)</h2>
 		<a href="http://themihirchronicles.tumblr.com"><button class ="btn" type="text">Enter!</button></a>
