--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 	<div class="body-container">
 		<h1 class="body-title">The Mihir Chronicles</h1><br>
 		<div class="body-content">
-		<p>Mihir here. Get it? Me here! I am a <strong>Software Engineer</strong> and an <strong>Entrepreneur</strong> based out of Chicago. I am a founder of <strong><a href="https://instagram.com/HumblePen/">Humble Pen</a></strong> and co-founded Royal Ace Investments, a commodity trading firm.</p>
+		<p>Mihir here. Get it? Me here! A <strong>Software Engineer</strong> and an <strong>Entrepreneur</strong> based out of Chicago. I founded <strong><a href="https://instagram.com/HumblePen/">Humble Pen</a></strong> and co-founded Royal Ace Investments, a commodity trading firm.</p>
 
-		<p>I am passionate and curious about <strong>finance, programming</strong> and <strong>technology</strong>. I find <strong>art</strong> and <strong>astronomy</strong> to be absolutely cool. I am a <strong>Telescope Instructor</strong> volunteer at the Adler Planetarium. I like to read a lot about various topics.</p>
+		<p>Passionate and curious about <strong>finance, programming, physics</strong> and <strong>engineering topics</strong>. During my free time, I like to explore <strong>art</strong> and <strong>astronomy</strong>. I am a <strong>Telescope Instructor</strong> volunteer at the Adler Planetarium. I like to read a lot. I truly beleive reading is the best way to earn education.</p>
 
-		<p>I find it fascinating to solve complex problems that helps achieve human well-being. Currently, self-teaching hardware programming, guitar and Mandarin.</p>
+		<p>Currently, self-teaching hardware programming, guitar and physics.</p>
 		</div>
 		<h2 class="body-end">-Mihir (me-here!)</h2>
 		<a href="http://themihirchronicles.tumblr.com"><button class ="btn" type="text">Enter!</button></a>
