--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="body-content">
 		<p>Mihir here. Get it? Me here! A <strong>Software Engineer</strong> and an <strong>Entrepreneur</strong> based out of Chicago. I founded <strong><a href="https://instagram.com/HumblePen/">Humble Pen</a></strong> and co-founded Royal Ace Investments, a commodity trading firm.</p>
 
-		<p>Passionate and curious about <strong>finance, programming, physics</strong> and <strong>engineering</strong> topics. During my free time, I like to explore <strong>art</strong> and <strong>astronomy</strong>. I am a <strong>Telescope Instructor</strong> volunteer at the Adler Planetarium. I like to read a lot. I truly beleive reading is the best way to earn education.</p>
+		<p>Passionate and curious about <strong>finance, programming, physics</strong> and <strong>engineering</strong> topics. During my free time, I like to explore <strong>art</strong> and <strong>astronomy</strong>. I am a <strong>Telescope Instructor</strong> volunteer at the Adler Planetarium. I like to read a lot. I truly believe reading is the best way to earn an education.</p>
 
 		<p>Currently, self-teaching hardware programming, guitar and physics.</p>
 		</div>
