--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<p>Mihir here. Get it? Me here!</p>
 			<p>I am a <strong>Software Engineer</strong> & an <strong>Entrepreneur</strong> based in Chicago. I am an owner at <strong><a href="https://instagram.com/HumblePen/">Humble Pen</a></strong> & an Engineer at Morningstar Inc.</p>
 
-			<p>Passionate & curious about <strong>finance, programming, physics</strong> and <strong>engineering</strong> topics. During my free time, I like to explore <strong>art</strong> and <strong>astronomy</strong>. I am a <strong>Telescope Instructor</strong> volunteer at the Adler Planetarium. I like to read a lot. I truly believe reading <i class="fa fa-book"></i> is the best way to earn education. Prefer to watch Pixar <i class="fa fa-film"></i>'s.</p>
+			<p>Passionate & curious about <strong>finance, programming, physics</strong> and <strong>engineering</strong> topics. During my free time, I like to explore <strong>art</strong> and <strong>astronomy</strong>. I am a <strong>Telescope Instructor</strong> volunteer at the Adler Planetarium. I like to read a lot. I truly believe reading <i class="fa fa-book"></i> is the best way to earn an education. Prefer to watch Pixar <i class="fa fa-film"></i>'s.</p>
 		</div>
 		<h2 class="body-end">-Mihir (me-here!)</h2>
 		<a href="http://themihirchronicles.tumblr.com"><button class ="btn" type="text">Enter!</button></a>
