--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 			<p>Passionate & curious about <strong>finance, programming, physics</strong> and <strong>engineering</strong> topics. During my free time, I like to explore <strong>art</strong> and <strong>astronomy</strong>. I am a <strong>Telescope Instructor</strong> volunteer at the Adler Planetarium. I like to read a lot. I truly believe reading <i class="fa fa-book"></i> is the best way to earn an education. Prefer to watch Pixar <i class="fa fa-film"></i>'s.</p>
 		</div>
 		<h2 class="body-end">-Mihir (me-here!)</h2>
-		<a href="http://themihirchronicles.tumblr.com"><button class ="btn" type="text">Enter!</button></a>
+		<a href="http://themihirchronicles.tumblr.com">
+			<button class ="btn" type="text">Enter!</button>
+		</a>
 		<!-- <button class ="btn" type="text">Essays</button> -->
 	</div>
 
