--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 </head>
 <body class="container">
 
-
 	<div class="header-container">
 		<i class="fa fa-space-shuttle fa-spinner fa-spin fa-3x"></i>
 	</div><br><br>
@@ -24,7 +23,7 @@
 		<h1 class="body-title">The Mihir Chronicles</h1><br>
 		<div class="body-content">
 			<p>Mihir here. Get it? Me here!</p>
-			<p>I am a <strong>Software Engineer</strong> & an <strong>Entrepreneur</strong> based in Chicago. I am an owner at <strong><a href="https://instagram.com/humbleart.co/">Humble Art</a></strong> & an Engineer at Morningstar Inc.</p>
+			<p>I am a <strong>Software Engineer</strong> & an <strong>Entrepreneur</strong> based in Chicago. I am an owner at <strong><a href="https://instagram.com/humbleart.co/">Humble Art</a></strong> & an Engineer at Morningstar Inc. Bitcoin is fun. Check out <strong><a href="https://bitcurve.firebaseapp.com/#/">Bitcurve</a></strong>.</p> 
 
 			<p>Passionate & curious about <strong>finance, programming, physics</strong> and <strong>engineering</strong> topics. During my free time, I like to explore <strong>art</strong> and <strong>astronomy</strong>. I am a <strong>Telescope Instructor</strong> volunteer at the Adler Planetarium. I like to read a lot. I truly believe reading <i class="fa fa-book"></i> is the best way to earn an education. Prefer to watch Pixar <i class="fa fa-film"></i>'s.</p>
 		</div>
