--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width" />
 	<title>The Mihir Chronicles</title>
 
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 	<link rel="stylesheet" href="style.css">
 	<link href='http://fonts.googleapis.com/css?family=Reenie+Beanie' rel='stylesheet' type='text/css'>
 	<link rel="shortcut icon" type="image/png" href="./favicon.JPG"/>
@@ -23,9 +23,9 @@
 		<h1 class="body-title">The Mihir Chronicles</h1><br>
 		<div class="body-content">
 			<p>Mihir here. Get it? Me here!</p>
-			<p>I am a <strong>Software Engineer</strong> & an <strong>Entrepreneur</strong> based in Chicago. I am an owner at <strong><a href="http://humbleart.co/">Humble Art</a></strong> & an Engineer at Morningstar Inc. Bitcoin is fun. Check out <strong><a href="https://bitcurve.firebaseapp.com/#/">Bitcurve</a></strong>.</p> 
+			<p>I am a <strong>Software Engineer</strong> & an <strong>Entrepreneur</strong> based in Chicago. I am an owner at <strong><a href="http://humbleart.co/">Humble Art</a></strong> & an Engineer at <strong><a href="http://www.morningstar.com/">Morningstar Inc</a></strong>.</p> 
 
-			<p>Passionate & curious about <strong>finance, programming, physics</strong> and <strong>engineering</strong> topics. During my free time, I like to explore <strong>art</strong> and <strong>astronomy</strong>. I am a <strong>Telescope Instructor</strong> volunteer at the Adler Planetarium. I like to read a lot. I truly believe reading <i class="fa fa-book"></i> is the best way to earn an education. Prefer to watch Pixar <i class="fa fa-film"></i>'s.</p>
+			<p>Curious about <strong>finance, programming, physics</strong> & <strong>engineering</strong> topics. During my free time, I like to explore <strong>art</strong> and <strong>astronomy</strong>. I am a <strong>Telescope Instructor</strong> at the Adler Planetarium. Reading is my only religion. I truly believe reading <i class="fa fa-book"></i> is the best way to earn an education. Prefer to watch Pixar <i class="fa fa-film"></i>'s. Bitcoin meets <strong><a href="https://bitcurve.firebaseapp.com/#/">Bitcurve</a></strong>.</p>
 		</div>
 		<h2 class="body-end">-Mihir (me-here!)</h2>
 		<a href="http://themihirchronicles.tumblr.com">
