--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<h1 class="body-title">The Mihir Chronicles</h1><br>
 		<div class="body-content">
 			<p>Mihir here. Get it? Me here!</p>
-			<p>I am a <strong>Software Engineer</strong> & an <strong>Entrepreneur</strong> based in Chicago. I am an owner at <strong><a href="http://humbleart.co/">Humble Art</a></strong> & an Engineer at <strong><a href="http://www.morningstar.com/">Morningstar Inc</a></strong>.</p> 
+			<p>I am a <strong>Software Engineer</strong> & an <strong>Entrepreneur</strong> based in Chicago. I am an owner at <strong><a href="http://humbleart.co/">Humble Art</a></strong> & an Engineer at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>.</p> 
 
 			<p>Curious about <strong>finance, programming, physics</strong> & <strong>engineering</strong> topics. During my free time, I like to explore <strong>art</strong> and <strong>astronomy</strong>. I am a <strong>Telescope Instructor</strong> at the Adler Planetarium. Reading is my only religion. I truly believe reading <i class="fa fa-book"></i> is the best way to earn an education. Prefer to watch Pixar <i class="fa fa-film"></i>'s. Bitcoin meets <strong><a href="https://bitcurve.firebaseapp.com/#/">Bitcurve</a></strong>.</p>
 		</div>
