--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<h1 class="body-title">The Mihir Chronicles</h1><br>
 		<div class="body-content">
 			<p>Mihir here. Get it? Me here!</p>
-			I am an <strong>Engineer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Previously, ran a startup called <strong><a href="http://humbleart.co/">Humble Art</a></strong> and was a <strong>Telescope Instructor</strong> at the Adler Planetarium.</p>
+			I am an <strong>Engineer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Previously, ran a venture called <strong><a href="http://humbleart.co/">Humble Art</a></strong> and was a <strong>Telescope Instructor</strong> at the Adler Planetarium.</p>
 
 			<p>Curious about <strong>finance, programming, physics</strong> & <strong>engineering</strong> topics. During my free time, I like to explore <strong>art</strong> and <strong>astronomy</strong>. I truly believe reading <i class="fa fa-book"></i> is the best way to earn an education. Prefer to watch Pixar <i class="fa fa-film"></i>'s. Bitcoin meets <strong><a href="https://bitcurve.firebaseapp.com/#/">Bitcurve</a></strong>.</p>
 		</div>
