--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<h1 class="body-title">The Mihir Chronicles</h1><br>
 		<div class="body-content">
 			<p>Mihir here. Get it? Me here!</p>
-			I am an <strong>Engineer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Previously, I ran a venture, <strong><a href="http://humbleart.co/">Humble Art</a></strong> & was a <strong>Telescope Instructor</strong> at the Adler Planetarium.</p>
+			I am an <strong>Engineer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Previously, I ran a venture, <strong><a href="http://instagram.com/humbleart.co/">Humble Art</a></strong> & was a <strong>Telescope Instructor</strong> at the Adler Planetarium.</p>
 
 			<p>Curious about <strong>finance</strong> & <strong>computer engineering</strong> topics. During my free time, I like to explore <strong>art</strong>, <strong>literature</strong> & <strong>telescopes</strong>. I truly believe reading <i class="fa fa-book"></i> is the best way to earn an education. A collection of thought-provoking <strong><a href="http://themihirchronicles.tumblr.com/Essays">essays</a></strong>. Prefer to watch Pixar <i class="fa fa-film"></i>'s.</p>
 		</div>
