--- a/index.html
+++ b/index.html
@@ -21,12 +21,13 @@
 	<div class="body-container">
 		<h1 class="body-title">The Mihir Chronicles</h1><br>
 		<div class="body-content">
-			<p>Me here.</p>
-			I am an <strong>Engineer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Previously, I ran a venture, <strong><a href="http://instagram.com/humbleart.co/">Humble Art</a></strong> & was a <strong>Telescope Instructor</strong> at the Adler Planetarium.</p>
+			<p>Me here, here!</p>
+			<strong>Software Engineer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Previously, ran <strong><a href="http://instagram.com/humbleart.co/">Humble Pen</a></strong> & was a <strong>Telescope Instructor</strong> at the Adler Planetarium.</p>
 
-			<p>Curious about <strong>finance</strong> & <strong>computer engineering</strong> topics. During my free time, I like to explore <strong>art</strong>, <strong>literature</strong> & <strong>telescopes</strong>. I truly believe reading <i class="fa fa-book"></i> is the best way to earn an education. A <strong>contranian</strong> view on life. A collection of thought-provoking <strong><a href="http://themihirchronicles.tumblr.com/Essays">essays</a></strong>. Prefer to watch Pixar <i class="fa fa-film"></i>'s.</p>
+			<p>Curious about <strong>finance</strong> & <strong>computer engineering</strong> topics. Fond of <strong>art</strong>, <strong>literature</strong> & <strong>telescopes</strong>. Reading nerd <i class="fa fa-book"></i>. <strong>Contranian </strong> views. Collection of thought-provoking <strong><a href="http://themihirchronicles.tumblr.com/Essays">essays</a></strong>. Prefer <strong><a href="https://youtu.be/kQjtK32mGJQ">Pixar</a></strong> <i class="fa fa-film"></i>'s.
+			</p>
 		</div>
-		<h2 class="body-end">-Mihir</h2>
+		<h2 class="body-end">-One Love</h2>
 		<a href="http://themihirchronicles.tumblr.com">
 			<button class ="btn" type="text">Enter!</button>
 		</a>
