--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<h1 class="body-title">The Mihir Chronicles</h1><br>
 		<div class="body-content">
 			<p>Me here, here!</p>
-			<strong>Software Engineer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Previously, ran <strong><a href="http://instagram.com/humbleart.co/">Humble Pen</a></strong> & was a <strong>Telescope Instructor</strong> at the Adler Planetarium.</p>
+			<strong>Software Engineer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Currently working on <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Previously, ran <strong><a href="http://instagram.com/humbleart.co/">Humble Pen</a></strong> & was a <strong>Telescope Instructor</strong> at the Adler Planetarium.</p>
 
 			<p>Curious about <strong>finance</strong> & <strong>computer engineering</strong> topics. Fond of <strong>art</strong>, <strong>literature</strong> & <strong>telescopes</strong>. Reading nerd <i class="fa fa-book"></i>. <strong>Contranian </strong> views. Collection of thought-provoking <strong><a href="http://themihirchronicles.tumblr.com/Essays">essays</a></strong>. Prefer <strong><a href="https://youtu.be/kQjtK32mGJQ">Pixar-esque</a></strong> <i class="fa fa-film"></i>'s.
 			</p>
