--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		</div>
 		<h2 class="body-end">-One Love</h2>
 		<a href="http://themihirchronicles.tumblr.com">
-			<button class ="btn" type="text">Enter!</button>
+			<button class ="btn" type="text">Blog</button>
 		</a>
 		<!-- <button class ="btn" type="text">Essays</button> -->
 	</div>
