--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 			<p>Me here, here!</p>
 			<strong>Software Engineer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Currently working on <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Previously, ran <strong><a href="http://instagram.com/humbleart.co/">Humble Pen</a></strong> & was a <strong>Telescope Instructor</strong> at the Adler Planetarium.</p>
 
-			<p>Curious about <strong>finance</strong> & <strong>computer engineering</strong> topics. Fond of <strong>art</strong>, <strong>literature</strong> & <strong>telescopes</strong>. Reading nerd <i class="fa fa-book"></i>. <strong>Contranian </strong> views. Collection of thought-provoking <strong><a href="http://themihirchronicles.tumblr.com/Essays">essays</a></strong>. Prefer <strong><a href="https://youtu.be/kQjtK32mGJQ">Pixar-esque</a></strong> <i class="fa fa-film"></i>'s.
+			<p>Curious about <strong>finance</strong> & <strong>computer science</strong> topics. Fond of <strong>art</strong>, <strong>literature</strong>, <strong>philosophy</strong> & <strong>telescopes</strong>. Reading nerd <i class="fa fa-book"></i>. Collection of thought-provoking <strong><a href="http://themihirchronicles.tumblr.com/Essays">essays</a></strong>.
 			</p>
 		</div>
 		<h2 class="body-end">-One Love</h2>
