--- a/index.html
+++ b/index.html
@@ -22,14 +22,13 @@
 		<h1 class="body-title">The Mihir Chronicles</h1><br>
 		<div class="body-content">
 			<p>Me here, here!</p>
-			<strong>Software Engineer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Previously, ran <strong><a href="http://instagram.com/humbleart.co/">Humble Pen</a></strong> & was a <strong>Telescope Instructor</strong> at the Adler Planetarium.</p>
-
-			<p>Curious about <strong>finance</strong> & <strong>computer science</strong> topics. Check out <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Fond of <strong>art</strong>, <strong>literature</strong>, <strong>philosophy</strong> & <strong>telescopes</strong>. Reading nerd <i class="fa fa-book"></i>. Collection of thought-provoking <strong><a href="http://themihirchronicles.tumblr.com/Essays">essays</a></strong>.
+			<strong>Software Engineer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Check out <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>.
+			<p>Curious about <strong>finance</strong> & <strong>computer science</strong> topics. Fond of <strong>art</strong>, <strong>design</strong>, <strong>aesthetics</strong>, <strong>literature</strong>, <strong>philosophy</strong> & <strong>telescopes</strong>. Reading nerd <i class="fa fa-book"></i>. Like to build things. Collection of thought-provoking <strong><a href="http://themihirchronicles.tumblr.com/Essays">essays</a></strong>.
 			</p>
 		</div>
-		<h2 class="body-end">-One Love</h2>
+		<h2 class="body-end">- To adventures & Fellowship</h2>
 		<a href="http://themihirchronicles.tumblr.com">
-			<button class ="btn" type="text">Blog</button>
+			<button class ="btn" type="text">Notes</button>
 		</a>
 		<!-- <button class ="btn" type="text">Essays</button> -->
 	</div>
