--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div class="body-content">
 			<p>Me here, here!</p>
 			<strong>Software Engineer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Check out <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>.
-			<p>Curious about <strong>finance</strong> & <strong>computer science</strong> topics. Fond of <strong>art</strong>, <strong>design</strong>, <strong>aesthetics</strong>, <strong>literature</strong>, <strong>philosophy</strong> & <strong>telescopes</strong>. Reading nerd <i class="fa fa-book"></i>. Like to build things. Collection of thought-provoking <strong><a href="http://themihirchronicles.tumblr.com/Essays">essays</a></strong>.
+			<p>Curious about <strong>finance</strong> & <strong>computer science</strong> topics. Fond of <strong>art</strong>, <strong>design</strong>, <strong>literature</strong>, <strong>philosophy</strong> & <strong>telescopes</strong>. Reading nerd <i class="fa fa-book"></i>. Like to build things. Collection of thought-provoking <strong><a href="http://themihirchronicles.tumblr.com/Essays">essays</a></strong>.
 			</p>
 		</div>
 		<h2 class="body-end">- To adventures & Fellowship</h2>
