--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<p>Curious about <strong>finance</strong> & <strong>computer science</strong> topics. Fond of <strong>art</strong>, <strong>design</strong>, <strong>literature</strong>, <strong>philosophy</strong> & <strong>telescopes</strong>. Reading nerd <i class="fa fa-book"></i>. Like to build things. Collection of thought-provoking <strong><a href="http://themihirchronicles.tumblr.com/Essays">essays</a></strong>.
 			</p>
 		</div>
-		<h2 class="body-end">- Dream Bold Dreams!</h2>
+		<h2 class="body-end">- Dream Bold & Grind Harder And Longer!</h2>
 		<a href="http://themihirchronicles.tumblr.com">
 			<button class ="btn" type="text">Notes</button>
 		</a>
