--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 		<h1 class="body-title">The Mihir Chronicles</h1><br>
 		<div class="body-content">
 			<p>Me here, here!</p>
-			<strong>Software Engineer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Check out <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>.
-			<p>Curious about <strong>finance</strong> & <strong>computer science</strong> topics. Fond of <strong>art</strong>, <strong>design</strong>, <strong>literature</strong>, <strong>philosophy</strong> & <strong>telescopes</strong>. Reading nerd <i class="fa fa-book"></i>. Like to build things. Collection of thought-provoking <strong><a href="http://themihirchronicles.tumblr.com/Essays">essays</a></strong>.
+			<strong>Software Engineer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Check out <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>finance</strong> & <strong>computer science</strong> topics. Fond of <strong>art</strong>, <strong>design</strong>, <strong>literature</strong>, <strong>philosophy</strong> & <strong>telescopes</strong>.
+			<p>Reading nerd <i class="fa fa-book"></i>. Like to build things <i class="fa fa-cogs"></i>. Collection of thought-provoking <strong><a href="http://themihirchronicles.tumblr.com/Essays">essays</a></strong> <i class="fa fa-pencil"></i>.
 			</p>
 		</div>
 		<h2 class="body-end">- Dream Bold & Grind Harder And Longer!</h2>
