--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<p>Reading nerd <i class="fa fa-book"></i>. Like to build things <i class="fa fa-cogs"></i>. Collection of thought-provoking <strong><a href="http://themihirchronicles.tumblr.com/Essays">essays</a></strong> <i class="fa fa-pencil"></i>.
 			</p>
 		</div>
-		<h2 class="body-end">- Dream Bold, Grind Harder & Longer!</h2>
+		<h2 class="body-end">- Dream Bold & Grind Longer!</h2>
 		<a href="http://themihirchronicles.tumblr.com">
 			<button class ="btn" type="text">Notes</button>
 		</a>
