--- a/index.html
+++ b/index.html
@@ -22,15 +22,14 @@
 		<h1 class="body-title">The Mihir Chronicles</h1><br>
 		<div class="body-content">
 			<p>Me here, here!</p>
-			<strong>Software Developer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Check out <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>finance</strong> & <strong>product engineering</strong> topics. Fond of <strong>art</strong>, <strong>history</strong> & <strong>telescopes</strong>.
-			<p>Reading nerd <i class="fa fa-book"></i>. Like to build things <i class="fa fa-cogs"></i>. Collection of thought-provoking <strong><a href="http://themihirchronicles.tumblr.com/Essays">essays</a></strong> <i class="fa fa-pencil"></i>.
+			<strong>Software Developer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Current project <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>finance</strong> & <strong>product engineering</strong> topics. Fond of <strong>art</strong>, <strong>history</strong> & <strong>telescopes</strong>.
+			<p>Reading nerd <i class="fa fa-book"></i>. Like to build things <i class="fa fa-cogs"></i>.
 			</p>
 		</div>
 		<h2 class="body-end">- To Adventures & Fellowship!</h2>
-		<a href="http://themihirchronicles.tumblr.com">
+		<!-- <a href="http://themihirchronicles.tumblr.com">
 			<button class ="btn" type="text">Notes</button>
-		</a>
-		<!-- <button class ="btn" type="text">Essays</button> -->
+		</a> -->
 	</div>
 
 	<div class="footer-container">
