--- a/bookclub.html
+++ b/bookclub.html
@@ -14,7 +14,7 @@
 
 <body class="container">
     <div class="header-container">
-        <i class="fa fa-space-shuttle fa-spinner fa-spin fa-3x"></i>
+        <i class="fa fa-book fa-3x"></i>
         <ul>
         	<li><a href="/">Home</a></li>
             <li><a href="/bookclub">Bookclub</a></li>
@@ -25,18 +25,29 @@
     <br>
     <br>
     <div class="body-container">
-        <h1 class="body-title">The Mihir Chronicles</h1>
+        <h1 class="body-title">The Bookclub</h1>
         <br>
         <div class="body-content">
-            <p>Me here, here!</p>
-            <strong>Software Developer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Check out <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>finance</strong> & <strong>product engineering</strong> topics. Fond of <strong>art</strong>, <strong>history</strong> & <strong>telescopes</strong>.
-            <p>Reading nerd <i class="fa fa-book"></i>. Like to build things <i class="fa fa-cogs"></i>.
-            </p>
+            <p>Reading is the best way to experience life! It is fun and adventurous! We all know money compounds, but so does knowledge. I am an avid reader and I would like to share with you what I read and learn. I invite you to join me on this adventorous journey of reading. I will only suggest you the best of what I read along with the snippets of what I learn.</p>
+            <br>
+            <ol>
+            	<li><a href="/">Grit</a></li><br>
+            	<li><a href="/">Sapiens</a></li><br>
+                <li><a href="/">Being Logical</a></li><br>
+                <li><a href="/">Snowball</a></li><br>
+                <li><a href="/">The Intelligent Investor</a></li><br>
+                <li><a href="/">Grit</a></li><br>
+                <li><a href="/">Sapiens</a></li><br>
+                <li><a href="/">Being Logical</a></li><br>
+                <li><a href="/">Snowball</a></li><br>
+                <li><a href="/">The Intelligent Investor</a></li><br>
+                <li><a href="/">Grit</a></li><br>
+                <li><a href="/">Sapiens</a></li><br>
+                <li><a href="/">Being Logical</a></li><br>
+                <li><a href="/">Snowball</a></li><br>
+                <li><a href="/">The Intelligent Investor</a></li><br>
+            </ol>
         </div>
-        <h2 class="body-end">- To Adventures & Fellowship!</h2>
-        <a href="/writing">
-            <button class="btn" type="text">Writing</button>
-        </a>
     </div>
     <div class="footer-container">
         <ul>
@@ -44,7 +55,6 @@
             <li><a href="https://www.linkedin.com/in/mihirchronicles"><i class="fa fa-linkedin fa-2x"></i></a></li>
             <li><a href="mailto:mihirptl89@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
         </ul>
-        All opinions shared are not recommendations.  
     </div>
     <!-- Google Analytics -->
     <script>
