--- a/writing.html
+++ b/writing.html
@@ -14,7 +14,7 @@
 
 <body class="container">
     <div class="header-container">
-        <i class="fa fa-space-shuttle fa-spinner fa-spin fa-3x"></i>
+        <i class="fa fa-pencil fa-3x"></i>
         <ul>
         	<li><a href="/">Home</a></li>
             <li><a href="/bookclub">Bookclub</a></li>
@@ -25,18 +25,18 @@
     <br>
     <br>
     <div class="body-container">
-        <h1 class="body-title">The Mihir Chronicles</h1>
+        <h1 class="body-title">Writing on Investment Topics</h1>
         <br>
         <div class="body-content">
-            <p>Me here, here!</p>
-            <strong>Software Developer</strong> at <strong><a href="http://www.morningstar.com/">Morningstar</a></strong>. Check out <strong><a href="https://wisecharlie.com/">Wise Charlie</a></strong>. Curious about <strong>finance</strong> & <strong>product engineering</strong> topics. Fond of <strong>art</strong>, <strong>history</strong> & <strong>telescopes</strong>.
-            <p>Reading nerd <i class="fa fa-book"></i>. Like to build things <i class="fa fa-cogs"></i>.
+            <p>I utilize writing as a tool to document what I learn and share on <strong>investment valuations</strong> and general market topics. I use a very rigorous analytical approach. I consider myself a value investor using Ben Graham's principles of investing.</p>
             </p>
+            <br>
+            <ol>
+                <li><a href="/">Why value still holds to be a preferred way of investing for many?</a></li><br>
+                <li><a href="/">Who are some of the most best value based investors?</a></li><br>
+                <li><a href="/">How can we evolve value in an information driven world?</a></li><br>
+            </ol>
         </div>
-        <h2 class="body-end">- To Adventures & Fellowship!</h2>
-        <a href="/writing">
-            <button class="btn" type="text">Writing</button>
-        </a>
     </div>
     <div class="footer-container">
         <ul>
@@ -44,7 +44,6 @@
             <li><a href="https://www.linkedin.com/in/mihirchronicles"><i class="fa fa-linkedin fa-2x"></i></a></li>
             <li><a href="mailto:mihirptl89@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
         </ul>
-        All opinions shared are not recommendations.  
     </div>
     <!-- Google Analytics -->
     <script>
