--- a/writing.html
+++ b/writing.html
@@ -29,7 +29,6 @@
         <br>
         <div class="body-content">
             <p>I utilize writing as a tool to document what I learn and share on <strong>investment valuations</strong> and general market topics. I use a very rigorous analytical approach. I consider myself a value investor using Ben Graham's principles of investing.</p>
-            </p>
             <br>
             <ol>
                 <li><a href="/">Why value still holds to be a preferred way of investing for many?</a></li><br>
@@ -44,6 +43,7 @@
             <li><a href="https://www.linkedin.com/in/mihirchronicles"><i class="fa fa-linkedin fa-2x"></i></a></li>
             <li><a href="mailto:mihirptl89@gmail.com"><i class="fa fa-envelope-o fa-2x"></i></a></li>
         </ul>
+        <p class="tiny-text"><a href="/disclaimer">Disclaimer</a></p>
     </div>
     <!-- Google Analytics -->
     <script>
