--- a/disclaimer.html
+++ b/disclaimer.html
@@ -17,7 +17,7 @@
         <i class="fa fa-gavel fa-3x"></i>
         <ul>
         	<li><a href="/">Home</a></li>
-            <li><a href="/bookclub">Bookclub</a></li>
+            <li><a href="/bookshelf">Bookshelf</a></li>
             <li><a href="/writing">Writing</a></li>
             <li><a href="/product">Product</a></li>
         </ul>
