--- a/product.html
+++ b/product.html
@@ -17,7 +17,7 @@
         <i class="fa fa-cogs fa-3x"></i>
         <ul>
         	<li><a href="/">Home</a></li>
-            <li><a href="/bookclub">Bookclub</a></li>
+            <li><a href="/bookshelf">Bookshelf</a></li>
             <li><a href="/writing">Writing</a></li>
             <li><a href="/product">Product</a></li>
         </ul>
@@ -28,12 +28,12 @@
         <h1 class="body-title">Product Engineering</h1>
         <br>
         <div class="body-content">
-            <p>I have been launching products for several years now. I find lots of joy building products that are either creative or solving problems. Below are my product stories.</p>
+            <p>I have been building and launching products for several years now. I find lots of joy in building creative products. Below you will find my past and present product stories.</p>
             <br>
             <ol>
-            	<li><a href="/">Humble Pen</a></li><br>
-                <li><a href="/">Spend Out</a></li><br>
             	<li><a href="/">Wise Charlie</a></li><br>
+                <li><a href="/">Spend Out</a></li><br>
+                <li><a href="/">Humble Pen</a></li><br>
             </ol>
         </div>
     </div>
