--- a/writing.html
+++ b/writing.html
@@ -17,7 +17,7 @@
         <i class="fa fa-pencil fa-3x"></i>
         <ul>
         	<li><a href="/">Home</a></li>
-            <li><a href="/bookclub">Bookclub</a></li>
+            <li><a href="/bookshelf">Bookshelf</a></li>
             <li><a href="/writing">Writing</a></li>
             <li><a href="/product">Product</a></li>
         </ul>
@@ -25,13 +25,13 @@
     <br>
     <br>
     <div class="body-container">
-        <h1 class="body-title">Writing on Investment Topics</h1>
+        <h1 class="body-title">Writing</h1>
         <br>
         <div class="body-content">
-            <p>I utilize writing as a tool to document what I learn and share on <strong>investment valuations</strong> and general market topics. I use a very rigorous analytical approach. I consider myself a value investor using Ben Graham's principles of investing.</p>
+            <p>I utilize writing as a tool to document what I learn and share on various topics, but mainly on <i>investment valuations</i> and general market topics. I consider myself as a value investor using Ben Graham's principles of investing.</p>
             <br>
             <ol>
-                <li><a href="/">Why value still holds to be a preferred way of investing for many?</a></li><br>
+                <li><a href="/posts/why-value-still-holds.html">Why value still holds to be a preferred way of investing for many?</a></li><br>
                 <li><a href="/">Who are some of the most best value based investors?</a></li><br>
                 <li><a href="/">How can we evolve value in an information driven world?</a></li><br>
             </ol>
