--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <i class="fa fa-space-shuttle fa-spin fa-3x"></i>
         <ul>
         	<li><a href="/">Home</a></li>
-            <li><a href="/bookshelf">Bookshelf</a></li>
-            <li><a href="/writing">Writing</a></li>
-            <li><a href="/product">Product</a></li>
+            <li><a href="./pages/bookshelf">Bookshelf</a></li>
+            <li><a href="./pages/writing">Writing</a></li>
+            <li><a href="./pages/product">Product</a></li>
         </ul>
     </div>
     <br>
@@ -34,7 +34,7 @@
             </p>
         </div>
         <h2 class="body-end">- To Adventures & Fellowship!</h2>
-        <a href="/writing">
+        <a href="./pages/writing">
             <button class="btn" type="text">Writing</button>
         </a>
     </div>
