--- a/pages/product.html
+++ b/pages/product.html
@@ -14,21 +14,27 @@
 
 <body class="container">
     <div class="header-container">
-        <i class="fa fa-pencil fa-3x"></i>
+        <i class="fa fa-cogs fa-3x"></i>
         <ul>
         	<li><a href="/">Home</a></li>
-            <li><a href="../pages/bookshelf">Bookshelf</a></li>
-            <li><a href="../pages/writing">Writing</a></li>
-            <li><a href="../pages/product">Product</a></li>
+            <li><a href="./bookshelf">Bookshelf</a></li>
+            <li><a href="./writing">Writing</a></li>
+            <li><a href="./product">Product</a></li>
         </ul>
     </div>
     <br>
     <br>
     <div class="body-container">
-        <h1 class="h2">Why value still holds to be a preferred way of investing for many?</h1>
+        <h1 class="body-title">Product Engineering</h1>
         <br>
         <div class="body-content">
-            <p>Work in Progress...</p>
+            <p>I have been building and launching products for several years now. I find lots of joy in building creative products. Below you will find my past and present product stories.</p>
+            <br>
+            <ol>
+            	<li><a href="/products/wise-charlie.html">Wise Charlie</a></li><br>
+                <li><a href="/products/spend-out.html">Spend Out</a></li><br>
+                <li><a href="/products/humble-pen.html">Humble Pen</a></li><br>
+            </ol>
         </div>
     </div>
     <div class="footer-container">
