--- a/pages/writing.html
+++ b/pages/writing.html
@@ -17,18 +17,27 @@
         <i class="fa fa-pencil fa-3x"></i>
         <ul>
         	<li><a href="/">Home</a></li>
-            <li><a href="../pages/bookshelf">Bookshelf</a></li>
-            <li><a href="../pages/writing">Writing</a></li>
-            <li><a href="../pages/product">Product</a></li>
+            <li><a href="./bookshelf">Bookshelf</a></li>
+            <li><a href="./writing">Writing</a></li>
+            <li><a href="./product">Product</a></li>
         </ul>
     </div>
     <br>
     <br>
     <div class="body-container">
-        <h1 class="h2">Why value still holds to be a preferred way of investing for many?</h1>
+        <h1 class="body-title">Writing</h1>
         <br>
         <div class="body-content">
-            <p>Work in Progress...</p>
+            <p>I utilize writing as a tool to document what I learn and share on various topics, but mainly on <i>investment valuations</i> and general market topics. I consider myself as a value investor using Ben Graham's principles of investing.</p>
+            <br>
+            <ol>
+                <li><a href="/posts/why-value-still-holds.html">Why value still holds to be a preferred way of investing for many great investors?</a></li><br>
+                <li><a href="">Who are some of the prominent value based investors?</a></li><br>
+                <li><a href="">How can we evolve value investment strategy in an information driven world?</a></li><br>
+                <li><a href="">What are the benefits and limitations of Discounted Cash Flow Models (DCFs)?</a></li><br>
+                <li><a href="">Why stock price fluctuations in short-term do not matter?</a></li><br>
+                <li><a href="">Historial moments and takeaways!</a></li><br>
+            </ol>
         </div>
     </div>
     <div class="footer-container">
