--- a/products/humble-pen.html
+++ b/products/humble-pen.html
@@ -25,7 +25,7 @@
     <br>
     <br>
     <div class="body-container">
-        <h1 class="h2">Why value still holds to be a preferred way of investing for many?</h1>
+        <h1 class="h2">Humble Pen</h1>
         <br>
         <div class="body-content">
             <p>Work in Progress...</p>
