--- a/products/spend-out.html
+++ b/products/spend-out.html
@@ -16,7 +16,7 @@
     <div class="header-container">
         <i class="fa fa-pencil fa-3x"></i>
         <ul>
-        	<li><a href="/">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="../pages/bookshelf">Bookshelf</a></li>
             <li><a href="../pages/writing">Writing</a></li>
             <li><a href="../pages/product">Product</a></li>
@@ -25,7 +25,7 @@
     <br>
     <br>
     <div class="body-container">
-        <h1 class="h2">Why value still holds to be a preferred way of investing for many?</h1>
+        <h1 class="h2">Spend Out</h1>
         <br>
         <div class="body-content">
             <p>Work in Progress...</p>
