--- a/products/humble-pen.html
+++ b/products/humble-pen.html
@@ -16,7 +16,7 @@
     <div class="header-container">
         <i class="fa fa-pencil fa-3x"></i>
         <ul>
-        	<li><a href="/">Home</a></li>
+            <li><a href="/">Home</a></li>
             <li><a href="../pages/bookshelf">Bookshelf</a></li>
             <li><a href="../pages/writing">Writing</a></li>
             <li><a href="../pages/product">Product</a></li>
@@ -28,7 +28,15 @@
         <h1 class="h2">Humble Pen</h1>
         <br>
         <div class="body-content">
-            <p>Work in Progress...</p>
+            <iframe src="https://player.vimeo.com/video/96494415" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+            <p><a href="https://vimeo.com/96494415">Humble Pen: Giving and Sharing</a> from <a href="https://vimeo.com/humbleart">Humble Pen</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+            <p><strong>Story:</strong>The project was inspired during my trip to Haiti in 2012. I wanted a break from finance so I decided I would build a project which would empower children and support their education. During my trip to Haiti, I met a 10-year-old kid who wanted to become an astronaut. I was inspired by her bold dreams. Several times during the project, the project stalled, due to my lack of experience in building physical products, lack of knowledge in supply chain and interacting with industrial designers. Eventually, the product launch was a success but the project failed after 2 years.</p>
+            <img src="../assets/hp_sketch.png">
+            <p>Sketch I drew before starting the project.</p>
+            <p><strong>Humble Pen</strong> was a hand-made designer pen made out of bamboo packaged in a beautiful box. Each pen also came with artist inspired postcards. For every purchase, the product supported educational needs for children in Haiti, India and Cambodia.</p>
+            <img src="../assets/humble_pen.jpg">
+            <p><strong>Results:</strong> Failure of the project was led due to lack of focus, bad hiring and lack of fundamental economics in the supply chain of humble pen. The product supported fair wages for artisans in the factory who produced our pens, artwork cost and philanthropy cost for education. This was naturally unsustainable in the long learn. Nonetheless, project was a success in its own right, Humble Pen supported education for almost 1000 kids.</p>
+            <p><strong>Instagram:</strong></p><a href="wwww.instagram.com/humblepen">@humblepen</a>
         </div>
     </div>
     <div class="footer-container">
